@@ -1,3 +1,8 @@
+2007-07-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/plot/CategoryPlot.java
+	(getRangeAxisIndex): New method.
+
 2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/renderer/category/BarRenderer.java
